Start of refactor to proper folder structure (separated services from data access, etc.).  Added H2.  Added Gradle task to auto-generate JOOQ wrappers around DB tables.